modified projects and about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,6 +3,27 @@
         <div class="col-md-4">
             <%= image_tag 'hipster.jpg', class: "img-responsive" %>
             <small>Yep, those are fake hipster glasses.</small>
+            <h3>Things I know:</h3>
+            <p>HTML5</p>
+            <p>CSS3</p>
+            <p>Some JavaScript</p>
+            <p>Ruby on Rails</p>
+            <p>Wordpress</p>
+            <p>Some PHP</p>
+            
+            <h3>Things I'm learning:</h3>
+            <p>Angular.js</p>
+            <p>Ember.js</p>
+            <p>Node.js</p>
+            <p>React.js</p>
+            <p>Swift</p>
+            <p>Ionic Framework</p>
+            <p>Framework7</p>
+            <p>PhoneGap</p>
+            
+            <h3>My Ruby Gems</h3>
+            <p>TransLink Canada</p>
+            
         </div><!-- col-md-4 -->
         <div class="col-md-8">
             <h1>I'm Marko Manojlovic.</h1>
