--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -8,7 +8,9 @@
      <div class="row">
         <div class="col-md-3">
             <h3>Discover City</h3>
-            <div class="row">
+            <%= image_tag "discover-vancouver-blog-logo.jpg", class: "img-responsive" %>
+            
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -18,17 +20,16 @@
                 <div class="col-md-3">
                     <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
-                <div class="col-md-3">
+                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
             </div>
-
         </div>
+        
         <div class="col-md-3">
             <h3>The Cookie Apps</h3>
-            <div class="row">
+            <%= image_tag "cookie-apps-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -38,8 +39,6 @@
                 <div class="col-md-3">
                     <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -47,7 +46,8 @@
         </div>
         <div class="col-md-3">
             <h3>The Cookie Dining</h3>
-            <div class="row">
+            <%= image_tag "cookie-dining-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "html-5-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -57,8 +57,6 @@
                 <div class="col-md-3">
                     <%= image_tag "js-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "digital-ocean-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -66,7 +64,8 @@
         </div>
         <div class="col-md-3">
             <h3>The Cookie Gateway</h3>
-            <div class="row">
+            <%= image_tag "cookie-gateway-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "html-5-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -76,8 +75,6 @@
                 <div class="col-md-3">
                     <%= image_tag "js-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "digital-ocean-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -89,7 +86,8 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-md-3">
             <h3>HipsterDolly</h3>
-            <div class="row">
+             <%= image_tag "hipster-dolly-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -99,9 +97,7 @@
                 <div class="col-md-3">
                     <%= image_tag "spree-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
-                <div class="col-md-3">
+                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
             </div>
@@ -109,7 +105,8 @@
         
         <div class="col-md-3">
             <h3>D-Lux Design</h3>
-            <div class="row">
+            <%= image_tag "dlux-design-store-blog-1.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -119,9 +116,7 @@
                 <div class="col-md-3">
                     <%= image_tag "spree-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
-                <div class="col-md-3">
+                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
             </div>
@@ -129,7 +124,8 @@
         
         <div class="col-md-3">
             <h3>Tradesgram</h3>
-            <div class="row">
+            <%= image_tag "tradesgram-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -139,8 +135,6 @@
                 <div class="col-md-3">
                     <%= image_tag "amazon-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -148,8 +142,9 @@
         </div>
         
         <div class="col-md-3">
-            <h3>Student Jobs</h3>
-            <div class="row">
+            <h3>FreelanceJobs</h3>
+            <%= image_tag "freelance-jobs-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -159,8 +154,6 @@
                 <div class="col-md-3">
                     <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -171,7 +164,8 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-md-3">
             <h3>Mothers Bookkeeping</h3>
-            <div class="row">
+             <%= image_tag "mothers-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -181,8 +175,6 @@
                 <div class="col-md-3">
                     <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -190,7 +182,8 @@
         </div>
         <div class="col-md-3">
             <h3>PBC Zap</h3>
-            <div class="row">
+             <%= image_tag "pbc-zap-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -200,9 +193,7 @@
                 <div class="col-md-3">
                     <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
-            </div>
-            <div class="row" style="margin-top: 7px;">
-                <div class="col-md-3">
+                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
             </div>
@@ -210,7 +201,8 @@
         
         <div class="col-md-3">
             <h3>Projectify</h3>
-            <div class="row">
+             <%= image_tag "projectify-blog.jpg", class: "img-responsive" %>
+            <div class="row" style="margin-top: 7px;">
                 <div class="col-md-3">
                     <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
@@ -220,8 +212,24 @@
                 <div class="col-md-3">
                     <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
             </div>
+        </div>
+        <div class="col-md-3">
+            <h3>RestyCMS</h3>
+             <%= image_tag "resty-blog.jpg", class: "img-responsive" %>
             <div class="row" style="margin-top: 7px;">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "dropbox-logo-blog.jpg", class: "img-responsive" %>        
+                </div>
                 <div class="col-md-3">
                     <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>        
                 </div>
