--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -29,7 +29,7 @@
             <h1>I'm Marko Manojlovic.</h1>
             <p>Ruby lover. Food lover. Soccer lover. Magic lover.</p>
             <hr>
-            <h3>My Storry</h3>
+            <h3>My Story</h3>
             <p>I grew up in Serbia. For you who have no idea what Serbia is - it is a small but proud country in Eastern Europe, just above Greece and next to Bulgaria. If it still doesn't ring a bell - <a href="https://en.wikipedia.org/wiki/Serbia" target="_blank">check this out</a>.</p>
             <h4>Ancient Days</h4>
             <p>Since I was a little boy, I was always currious about computers. I rememmber one time, my uncle brought this huge machine home, it was so heavy but so cool! It had a <a href="https://en.wikipedia.org/wiki/Monochrome_monitor" target="_blank">monochrome monitor</a>, a keyboard and a mouse. Nothing else. But hey, it was love at first sight and I knew I will have so much fun with it! Well, at least breaking it.</p>
