--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <%= link_to 'New Post', new_post_path, class: "btn btn-success" if user_signed_in? %>
+      <h1>My blog.</h1>
     </div>
   </div>
   
