modified about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -27,36 +27,26 @@
         </div><!-- col-md-4 -->
         <div class="col-md-8">
             <h1>I'm Marko Manojlovic.</h1>
-            <p>Ruby lover. Food lover. Soccer lover. Magic lover.</p>
+            <p>Ruby lover. Food lover. Soccer lover. Magic lover. Life lover. Family first - everything else second.</p>
             <hr>
             <h3>My Story</h3>
-            <p>I grew up in Serbia. For you who have no idea what Serbia is - it is a small but proud country in Eastern Europe, just above Greece and next to Bulgaria. If it still doesn't ring a bell - <a href="https://en.wikipedia.org/wiki/Serbia" target="_blank">check this out</a>.</p>
-            <h4>Ancient Days</h4>
-            <p>Since I was a little boy, I was always currious about computers. I rememmber one time, my uncle brought this huge machine home, it was so heavy but so cool! It had a <a href="https://en.wikipedia.org/wiki/Monochrome_monitor" target="_blank">monochrome monitor</a>, a keyboard and a mouse. Nothing else. But hey, it was love at first sight and I knew I will have so much fun with it! Well, at least breaking it.</p>
-            <h4>Moving to Canada</h4>
-            <p>I moved to Canada on November 1st, 2011, on my 27th birthday. I landed in Montreal (QC), at 1:30am, on -10 degrees Celsius. I had no idea where I was, I had some money on me, a huge bag with about 70 poudns of stuff and this phone number of my landlord, who I never met nor spoke to before. Montreal was super fun, my apartment was about 100 square foot but damn it felt good! New country, new opportunities! Btw, I moved to Vancouver when winter rolled in (from +7 celsius to -35 in 24 hours). You can call me any names you want, but hey, I just wasn't prepared for that.</p>
-            <h4>Modern Days</h4>
-            <p>I got interested in Ruby and Ruby on Rails about a two years ago. I tried to learn it by reading some online tutorials, but it got me nowhere. I had a business in making at that time so I decided to postpone my Ruby adventure.</p>
-            <p>About a year ago, business was going nowhere so I thought to myself "Hey, why don't I try Ruby again?". I tried same online tutorials, I was reading and reading and getting more confused. The more I read - the more confused I got. I decided not to give up. I couldn't disapoint myself by quiting when nothing is going in good direction.</p>
-            <p>Today, I am at the stage where I can write some Ruby, make a Rails app from scratch without any tutorials and I'm looking into some more complex stuff, like building my own gems. I am learning testing as well.</p>
-            <h4>OK, thime to wrap it up</h4>
-            <p>I made this blog by myself, as one of my learning projects. I didn't want to use Wordpress or any out-of-the-box platforms out there, just to write some blog posts and pretend that I am smart.</p>
-            <p>
-                My blog has:
-                <ul>
-                    <li>Posts CRUD</li>
-                    <li>Customized Devise (I am the only user and you can't register)</li>
-                    <li>CarrierWave, MiniMagick and Dropbox API for hosting pictures</li>
-                    <li>CKEDITOR for my posts</li>
-                    <li>CKEDITOR CodeSnippet plugin for my code markups in posts</li>
-                    <li>Twitter Bootstrap (because why not?)</li>
-                    <li>FriendlyID for SEO and beautiful URLs</li>
-                    <li>Will Paginate for post pagination</li>
-                    <li>Some security gems</li>
-                    <li>Nice "Roboto" Google font</li>
-                    <li>Hosted on Heroku</li>
-                </ul>
-            </p>
+            <p>I was born in Belgrade, Serbia, former Yugoslavia. I was lucky enough to have great parents: a tough father who would push me to be the best in anything I do, no matter what, and a gentle mother who would support me what ever I wanted to do.</p>
+            <p>My dad was electrical and mechanical engineer, and because I was the older son, I had to go everywhere to help him. I think that is the time when I discovered my passion for computers. I was so clumsy with anything my dad wanted me to do (things like disassembling huge water pumps that are 70lbs+ heavy, getting the right tools to him; you know, the things that all 12 year old kids do). I imagined myself slipping on a flat ground while carrying sharp tools, and I just had to pass that great opportunity. I picked the safe place to be - behind the screen, sitting in a comfy chair.</p>
+            <h4>Early Days</h4>
+            <p>Having parrents like I had was a blessing for me, and when you add a super-awesome uncle to the mix - that was like adding a cherry on top of the cake for me.</p>
+            <p>My uncle is a super-smart guy, probably the smartest person I know. When I was a little kid, he always took me with him where ever he was going. I didn't quite understand what his job was at the time, but I know that he had that big grey box under his desk, a screen with green words on a black background and a box with some letters on it. He was doing something to it, it made noise, and I was like whoa! I wanted to be my uncle right there and than.</p>
+            <h4>Fast forward 20 years...</h4>
+            <p>I'm 32 now, and I did a ton of stuff in the meantime.</p>
+            <p>I finished highschool, I graduated, started a business - failed, started another business - kinda had a success, got a job, lost a job, had some epic parties and finally - moved to Canada.</p>
+            <h4>Early Canadian Days</h4>
+            <p>I landed in Montreal, on my birthday, and that was the happiest day of my life. I felt so alive, so grateful to be where I was! Nothing was more important to me but that moment! I landed at 1am, had no change for a pay phone, had no idea where I was, I kinda knew French but soon I realized that I didn't know French. All I had was this phone number of my landlord, who I never met nor spoke with before, and address where my apartment is. I lived in apartment that is smaller than your bathroom. Closet actually had a bed that you pull from the top, and than my room would be just that - a big bed. Nothing else could fit in there. Happy days. </p>
+            <p>I moved to Vancouver right after the first winter came, which was about a month later. It went from +5 degrees to -30 overnight, and I felt I can't handle the cold, so I decided to move. Fortunately for me, my super-badass-cool uncle lives in Vancouver, so I stayed with my family for some time.</p>
+            <h4>Fast Forward 4 years...</h4>
+            <p>I had a chance to work with my uncle, at the same company for over 4 years now. I enjoyed every second of it. Remember, he was my hero growing up.</p>
+            <p>I started my own business in June 2012. I wanted to sell my web skills to the good people of Vancouver. I was a bit chubby guy back in the days, and I just loved cookies, so I decided to call my company Cookie. But, not just any cookie, I called it "The Cookie".</p>
+            <p>It was an emotional roller coaster, as any business is. But, I learnt a lot of things which was more valuable than money I made.</p>
+            <p>I learnt that you have to stay hungry, you have to invest time in your education when ever you can, and you have to stay focused. And that's what I do today.</p>
+            <h4>Never stop learning, because life never stops teaching.</h4>
         </div>
     </div>
 </div>
