--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,9 +2,8 @@
     <div class="jumbotron">
         <h1><%= image_tag 'rostilj.jpg', class: "img-rounded img-responsive", style: "width: 260px; margin: 0px auto;"%></h1>
         <div class="text-center">
-            <p>Hi, I'm Marko. I love learning new things, and I love writing about them.</p>
-            <p><small>Intention of this blog is to keep myself motivated to learn new things, every day.<br>If you see that I am doing something wrong in my approach, code, or anything - I would love to hear from you in comments or email me at marko.manojlovic.bg[at]gmail.com!</small></p>
-            <p><%# link_to "My Storry", pages_about_path, class: "btn btn-primary btn-lg" %></p>
+            <p>Hi, I'm Marko. I make this &amp; I break things &amp; I make them again.</p>
+            <p><small>Until I break them one more time.</small></p>
         </div>
         
     </div><!-- jumbotron -->
