modified about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -35,18 +35,18 @@
             <h4>Early Days</h4>
             <p>Having parrents like I had was a blessing for me, and when you add a super-awesome uncle to the mix - that was like adding a cherry on top of the cake for me.</p>
             <p>My uncle is a super-smart guy, probably the smartest person I know. When I was a little kid, he always took me with him where ever he was going. I didn't quite understand what his job was at the time, but I know that he had that big grey box under his desk, a screen with green words on a black background and a box with some letters on it. He was doing something to it, it made noise, and I was like whoa! I wanted to be my uncle right there and than.</p>
-            <h4>Fast forward 20 years...</h4>
+            <h4>Fast Forward 20 Years...</h4>
             <p>I'm 32 now, and I did a ton of stuff in the meantime.</p>
             <p>I finished highschool, I graduated, started a business - failed, started another business - kinda had a success, got a job, lost a job, had some epic parties and finally - moved to Canada.</p>
             <h4>Early Canadian Days</h4>
             <p>I landed in Montreal, on my birthday, and that was the happiest day of my life. I felt so alive, so grateful to be where I was! Nothing was more important to me but that moment! I landed at 1am, had no change for a pay phone, had no idea where I was, I kinda knew French but soon I realized that I didn't know French. All I had was this phone number of my landlord, who I never met nor spoke with before, and address where my apartment is. I lived in apartment that is smaller than your bathroom. Closet actually had a bed that you pull from the top, and than my room would be just that - a big bed. Nothing else could fit in there. Happy days. </p>
             <p>I moved to Vancouver right after the first winter came, which was about a month later. It went from +5 degrees to -30 overnight, and I felt I can't handle the cold, so I decided to move. Fortunately for me, my super-badass-cool uncle lives in Vancouver, so I stayed with my family for some time.</p>
-            <h4>Fast Forward 4 years...</h4>
+            <h4>Fast Forward 4 Years...</h4>
             <p>I had a chance to work with my uncle, at the same company for over 4 years now. I enjoyed every second of it. Remember, he was my hero growing up.</p>
             <p>I started my own business in June 2012. I wanted to sell my web skills to the good people of Vancouver. I was a bit chubby guy back in the days, and I just loved cookies, so I decided to call my company Cookie. But, not just any cookie, I called it "The Cookie".</p>
             <p>It was an emotional roller coaster, as any business is. But, I learnt a lot of things which was more valuable than money I made.</p>
             <p>I learnt that you have to stay hungry, you have to invest time in your education when ever you can, and you have to stay focused. And that's what I do today.</p>
-            <h4>Never stop learning, because life never stops teaching.</h4>
+            <h4><strong>Never stop learning, because life never stops teaching.</strong></h4>
         </div>
     </div>
 </div>
