new about me page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,23 +4,83 @@
             <%= image_tag 'hipster.jpg', class: "img-responsive" %>
             <small>Yep, those are fake hipster glasses.</small>
             <h3>Things I know:</h3>
-            <p>HTML5</p>
-            <p>CSS3</p>
-            <p>Some JavaScript</p>
-            <p>Ruby on Rails</p>
-            <p>Wordpress</p>
-            <p>Some PHP</p>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "ruby-on-rails-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "html-5-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "css-3-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "js-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "haml.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "slim.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "sass.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "wordpress.jpg", class: "img-responsive" %>
+                </div>
+            </div>
+             <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "bootstrap-3-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "foundation.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "heroku-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "amazon-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+            </div>
+             <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "digital-ocean-logo-blog.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "framework-7.jpg", class: "img-responsive" %>
+                </div>
+                
+            </div>
             
             <h3>Things I'm learning:</h3>
-            <p>Angular.js</p>
-            <p>Ember.js</p>
-            <p>Node.js</p>
-            <p>React.js</p>
-            <p>Swift</p>
-            <p>Ionic Framework</p>
-            <p>Framework7</p>
-            <p>PhoneGap</p>
-            
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "angular.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "node.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "react.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "ember.jpg", class: "img-responsive" %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <%= image_tag "swift.jpg", class: "img-responsive" %>
+                </div>
+                <div class="col-md-3">
+                    <%= image_tag "ionic.jpg", class: "img-responsive" %>
+                </div>
+                
+            </div>
+
             <h3>My Ruby Gems</h3>
             <p>TransLink Canada</p>
             
@@ -33,7 +93,7 @@
             <p>I was born in Belgrade, Serbia, former Yugoslavia. I was lucky enough to have great parents: a tough father who would push me to be the best in anything I do, no matter what, and a gentle mother who would support me what ever I wanted to do.</p>
             <p>My dad was electrical and mechanical engineer, and because I was the older son, I had to go everywhere to help him. I think that is the time when I discovered my passion for computers. I was so clumsy with anything my dad wanted me to do (things like disassembling huge water pumps that are 70lbs+ heavy, getting the right tools to him; you know, the things that all 12 year old kids do). I imagined myself slipping on a flat ground while carrying sharp tools, and I just had to pass that great opportunity. I picked the safe place to be - behind the screen, sitting in a comfy chair.</p>
             <h4>Early Days</h4>
-            <p>Having parrents like I had was a blessing for me, and when you add a super-awesome uncle to the mix - that was like adding a cherry on top of the cake for me.</p>
+            <p>Having parents like I had was a blessing for me, and when you add a super-awesome uncle to the mix - that was like adding a cherry on top of the cake for me.</p>
             <p>My uncle is a super-smart guy, probably the smartest person I know. When I was a little kid, he always took me with him where ever he was going. I didn't quite understand what his job was at the time, but I know that he had that big grey box under his desk, a screen with green words on a black background and a box with some letters on it. He was doing something to it, it made noise, and I was like whoa! I wanted to be my uncle right there and than.</p>
             <h4>Fast Forward 20 Years...</h4>
             <p>I'm 32 now, and I did a ton of stuff in the meantime.</p>
